# csgo-quake-sounds

./: .gitignore  BUILDING.md  LICENSE  README.md  RUNNING.md  TODO  avbin.dll.REMOVED.git-id  avbin64.dll.REMOVED.git-id  build.bat  build.py  client.py  config.ini  config.py  gamestate_integration_ccs.cfg  gamestate_integration_quake.cfg  gui.py  installer.cfg  libavbin.so.11.REMOVED.git-id  main.py  packets.proto  packets_pb2.py  packets_pb2.pyi  protocol.py  pyproject.toml  requirements.txt  server.py  server_requirements.txt  setup.py  sounds.py  state.py  steamfiles.py  test.py  threadripper.py  threads.py  util.py
mvps/: bastou oh mon dieu.flac  el ratoune tu fais quoi.flac  idubbz impressive.flac  la chèvre shadowplay.flac  oktan terminus.flac
sounds/2 kills/: doublekill.opus
sounds/3 kills/: megakill.opus  triplekill.opus  ultrakill.opus
sounds/4 kills/: multikill.opus  rampage.opus  unstoppable.opus  whickedsick.opus
sounds/5 kills/: godlike.opus  monsterkill.opus
sounds/Collateral/: holyshit.opus  ownage.opus
sounds/Death/: death1.opus  death10.opus  death11.opus  death12.opus  death2.opus  death3.opus  death4.opus  death5.opus  death6.opus  death7.opus  death8.opus  death9.opus
sounds/Flashed/: blinded1.opus  blinded2.opus  blinded3.opus  blinded4.opus  blinded5.opus  blinded6.opus  blinded7.opus  perfect.opus
sounds/Headshot/: headshot.opus  headshot2.opus  headshot3.opus
sounds/MVP/: impressive.opus
sounds/Round start/: prepare.opus  prepare2.opus  prepare3.opus  prepare4.opus
sounds/Round win/: noenemiesleft.opus  onarollbrag1.opus  (+14 more)
(+3 files in other folders)
